update content (incomplete)

--- a/CategoryMutex.mediawiki
+++ b/CategoryMutex.mediawiki
@@ -63,25 +63,28 @@ Note that a variable the ''condition variable'' is monitoring is generally prote
 
 
 '''''Here is an analogy that utilizes all three primitives together:'''''
- ~-Imagine a buffet-style restaurant.  You, the customer, (one of the ''threads'') would like to utilize the goods and services (data structures) available at this restaurant.  When you enter the restaurant you are first met by a Host(ess) (a ''thread'').  (S)He asks for the number of individuals in your party and checks to see if there is an available table.  (It wouldn't do to send you through the buffet line only to have you find nowhere to sit.)  <<Color2(green,It seems that there would be a data structure or something that would record the number in your party and transfer that information to the Buffet Manager for his/her decision-making purpose.  What form would that likely take in this analogy?  Not a semaphore right?  Just a data structure - "party size" - that is somehow attached to your group?  Could that info be passed directly to the Buffet Manager by the Host(ess) or would the Buffet Manager need to ask you again?  Would it be data associated with you/your party that would be independently queried by each restaurant worker that needed the information?)>>
-*''Semaphores'' track the number of available tables of each size (ex: 4 of 2-seats, 8 of 4-seats, 5 of 6-seats, etc.).
-:They are decremented (reduced) from the maximum number of tables of each size as patrons are seated (ex: 4 decremented to 3 of 2-seat tables when a couple is seated).  
-:They are incremented (increased) up to the maximum number as patrons leave and the tables are cleaned for the next guests (ex: 3 up to 4 of 6-seat tables when a large party leaves).
-*A ''mutex'' protects the count from being changed by more than one restaurant worker at a time.  (ex: If the Host(ess) is changing the number then a Busser cannot be simultaneously changing the number.)
-*A ''condition variable'' monitors the ''semaphores'' for changes.  When a ''semaphore'' count changes the ''condition variable'' alerts the Host(ess) to check the counts to see if the next Party can be seated.
- The Host(ess) checks the appropriate semaphore for the table size needed for your party.  If the number is 0 you are requested to wait.  If the number is __>__1 you are allowed to enter the buffet line.  <<Color2(green,Can a semaphore count be protected by a mutex?  How is that handled - if the 
-*In addition, the Host(ess) also locks the ''mutex'' and decrements (reduces the count by 1) the ''semaphore'' for that size table, so (s)he knows it is taken and does not accidentally assign it to another party while you are sitting there.
- Once a table is available you are ushered through to the next phase.  The next person you meet is the Buffet Manager (another ''thread'').  (You'll have to be a little flexible with the analogy at this point.)  One of the Buffet Manager's jobs is to ensure that no one passes through the buffet line unless a plate, cup, spoon, fork, and knife (the hardware) is available for them.  (We're not going to address the actual food here, but it could work similarly to the hardware.)  Unfortunately (s)he is not able to see the stacks of hardware at the buffet from where (s)he greets the patrons.  In addition, there must be enough available to send each entire party through together.
-*There are 3 categories of people who interact directly with the hardware -
-*Patrons who take hardware to use, 
-*Bussers who bring clean hardware back, 
-*and the Buffet Manager who ensures that patrons will be able to find the hardware they will need to eat with before sending a party through the buffet line.  
-  To prevent confusion, there is a ''mutex'' protecting the hardware from being changed by more than one person at a time (in this case it could be as simple as the physical space to access the hardware being limited to the size of one person).
-*When a Busser adds hardware (s)he increments (increases) the count for that type of hardware by the number of pieces that are returned.
-*When a Patron takes a piece of hardware to use, the count is decremented (decreased) for that type of hardware.
-*The Buffet Manager does not send a group through the buffet line if there aren't enough pieces of all types of hardware for each member of the party to be able to take one piece.
-*In order to know when it is OK to send a party through the buffet the Buffet Manager must check the ''^semaphores? / some other quantity-tracking data structure?^'' that are monitoring the available count of each type of hardware.  Because of the ''mutex'' the Buffet Manager can only view the current counts when no one else is interacting with the hardware.  This ensures that the Buffet Manager is basing his/her decision to send a group back on current, accurate counts.
-*In order to make the process of checking as efficient as possible a ''condition variable'' is set up to alert the Buffet Manager whenever a hardware count changes, rather than requiring the Buffet Manager to constantly check for changes.  This alert tells the Buffet Manager to check the numbers again to see if the count has become high enough for each type of hardware to let the next party through the buffet line.  If, following an alert, there is still not enough hardware ready for the next party, then the Buffet Manager can go back to other tasks and ignore the counts until another alert from the ''condition variable'' comes through again.  Once there are enough pieces of hardware available for the next party to pass through, the Buffet Manager ushers them to the buffet line.-~
+ ~-Imagine a buffet-style restaurant.  You, the customer, (one of the ''threads'') would like to utilize the goods and services (data structures) available at this restaurant.  When you enter the restaurant you are first met by a Host(ess) (another ''thread'').  (S)He asks for the number of individuals in your party.  (S)He assigns your party size to a read-only variable (Party<code></code>Size=x) that will follow you through the restaurant so no one else has to ask the same question.  <<Color2(green,?? Does this sound right for a way to transfer party size info to the Buffet Manager later?  The idea being that (s)he shouldn't have to ask you how big your party is once the Host(ess) has asked.  Seems like that is info that could be transmitted to him/her simultaneous with the Host(ess) sending you through?)>> The Host(ess) then checks to see if there is an available table of an appropriate size (Table<code></code>Size=x).
+*''Semaphores'' track the number of available tables of each size (ex: 4 of Table<code></code>Size=2, 8 of Table<code></code>Size=4, 5 of Table<code></code>Size=6, etc.).
+*They are decremented (reduced) from the maximum number of tables of each size as patrons are seated (ex: 4 decremented to 3 of Table<code></code>Size=2 when a couple is seated).  
+*They are incremented (increased) up to the maximum number as patrons leave and the tables are cleaned for the next guests (ex: 3 incremented to 4 of Table<code></code>Size=6 when a family leaves).
+*?? A ''mutex'' protects the ''semaphores'' from being changed by more than one restaurant worker at a time.  (ex: If the Host(ess) is changing the value because a party is being let in then a Busser cannot simultaneously change the value when a table of the same size has just been cleaned.  The Busser could, however, change the value for a table of a different size.) ??  <<Color2(green,Can a semaphore count be protected by a mutex?  How is that handled if more than one thread (restaurant worker) needs to be able to change the value?)>>
+*A ''condition variable'' monitors the ''semaphores'' for changes.  When a ''semaphore'' count changes the ''condition variable'' alerts the Host(ess) to check the counts to see if a waiting Party can be seated.
+ The Host(ess) checks the appropriate semaphore for the table size needed for your party (Table<code></code>Size __>__ Party<code></code>Size).  If the value is 0 you and your party are requested to wait.  If the value is __>__1 your party is allowed to enter the buffet line.
+*?? The Host(ess) locks the ''mutex'' and decrements (reduces the count by 1) the ''semaphore'' for that size table, so (s)he knows it is taken and does not accidentally assign it to another party while you are sitting there. ??
+ The next person you meet is the Buffet Manager (another ''thread'').  
+  (Please bear with the analogy a little at this point.  While this may not occur in a real restaurant, it is not inconceivable and fits the situation well.)  
+ One of the Buffet Manager's jobs is to ensure that no one passes through the buffet line unless a plate, cup, spoon, fork, and knife (the hardware) is available for them.  There must be enough of each available to send an entire party through together.
+*There are 5 types of hardware (as above) being monitored in this example.
+*Each has a variable holding a current count (ex: forks=18, spoons=20, knives=11, etc.)
+*Each variable is protected by its own ''mutex''.  This prevents a Patron from taking hardware (and decrementing the variables) while a busser is refilling the hardware (and incrementing the variables), which may confuse the count.
+*Each variable is monitored by a single ''condition variable'' that watches for the values to change.  A change in any one variable triggers the ''condition variable'', which alerts the Buffet Manager to check and see if there is now enough hardware to send the next party through.
+*There are 3 categories of people who interact directly with the hardware.
+*Patrons who take hardware to use and cause the count to be decremented.
+*Bussers who bring clean hardware back and cause the count to be incremented.
+*The Buffet Manager who reads the variable counts and ensures that there is sufficient hardware  before sending a party through the buffet line.
+ In order to know when it is OK to send a party through the buffet, the Buffet Manager must check the hardware variables and compare them to the Party<code></code>Size variable for your party (all counts must be __>__ Party<code></code>Size).  If the initial check when your party approaches finds the counts too low the Buffet Manager waits on the ''condition variable'' and your party (thread) waits in line.
+*Because of the ''mutex'' the Buffet Manager can only view the current counts when no one else is interacting with the hardware.  This ensures that the Buffet Manager is basing his/her decision to send a group back on current, accurate counts.
+*If your party has to wait, you will wait until the ''condition variable'' alerts the Buffet Manager that a hardware count has changed.  (This is more efficient than requiring the Buffet Manager to constantly check for changes or having only periodic checks that may leave available hardware sitting unused and Patrons waiting in line unnecessarily.)  This alert tells the Buffet Manager to check the numbers again to see if the count has become high enough for each type of hardware to let the next party through the buffet line.  If, following an alert, there is still not enough hardware ready for the next party, then the Buffet Manager can go back to other tasks and ignore the counts until another alert from the ''condition variable'' comes through.  Once there are enough pieces of hardware available for the next party to pass through, the Buffet Manager ushers them to the buffet line.-~
 
 
 == Functions ==
