update content (incomplete)

--- a/CategoryMutex.mediawiki
+++ b/CategoryMutex.mediawiki
@@ -62,7 +62,7 @@ Note that a variable the ''condition variable'' is monitoring is generally prote
   It is useless to keep getting out your phone and checking the inbox if there is nothing new there.  Having an alert tell you as soon as something has arrived saves you time and energy and ensures that you know the moment the message becomes available instead of eventually when you get around to checking again.  Similarly, ''condition variables'' help to keep threads busy when there is something to do but idle when there isn't.-~
 
 
-'''''Here is an analogy that utilizes all three primitives together:'''''
+=== An Analogy Using All Three ===
  ~-Imagine a buffet-style restaurant.  You, the customer, (one of the ''threads'') would like to utilize the goods and services (data structures) available at this restaurant.  When you enter the restaurant you are first met by a Host(ess) (another ''thread'').  (S)He asks for the number of individuals in your party.  (S)He assigns your party size to a read-only variable (Party<code></code>Size=x) that will follow you through the restaurant so no one else has to ask the same question.  <<Color2(green,?? Does this sound right for a way to transfer party size info to the Buffet Manager later?  The idea being that (s)he shouldn't have to ask you how big your party is once the Host(ess) has asked.  Seems like that is info that could be transmitted to him/her simultaneous with the Host(ess) sending you through?)>> The Host(ess) then checks to see if there is an available table of an appropriate size (Table<code></code>Size=x).
 *''Semaphores'' track the number of available tables of each size (ex: 4 of Table<code></code>Size=2, 8 of Table<code></code>Size=4, 5 of Table<code></code>Size=6, etc.).
 *They are decremented (reduced) from the maximum number of tables of each size as patrons are seated (ex: 4 decremented to 3 of Table<code></code>Size=2 when a couple is seated).  
