update content (incomplete)

--- a/CategoryMutex.mediawiki
+++ b/CategoryMutex.mediawiki
@@ -73,18 +73,27 @@ Note that a variable the ''condition variable'' is monitoring is generally prote
 *?? The Host(ess) locks the ''mutex'' and decrements (reduces the count by 1) the ''semaphore'' for that size table, so (s)he knows it is taken and does not accidentally assign it to another party while you are sitting there. ??
  The next person you meet is the Buffet Manager (another ''thread'').  
   (Please bear with the analogy a little at this point.  While this may not occur in a real restaurant, it is not inconceivable and fits the situation well.)  
- One of the Buffet Manager's jobs is to ensure that no one passes through the buffet line unless a plate, cup, spoon, fork, and knife (the hardware) is available for them.  There must be enough of each available to send an entire party through together.
-*There are 5 types of hardware (as above) being monitored in this example.
+ The Buffet Manager's job is to ensure that no one passes through the buffet unless it is ready for them.
+*There are 5 types of hardware (plate, cup, spoon, fork, and knife) being monitored in this example.
 *Each has a variable holding a current count (ex: forks=18, spoons=20, knives=11, etc.)
 *Each variable is protected by its own ''mutex''.  This prevents a Patron from taking hardware (and decrementing the variables) while a busser is refilling the hardware (and incrementing the variables), which may confuse the count.
 *Each variable is monitored by a single ''condition variable'' that watches for the values to change.  A change in any one variable triggers the ''condition variable'', which alerts the Buffet Manager to check and see if there is now enough hardware to send the next party through.
-*There are 3 categories of people who interact directly with the hardware.
+*There are 3 categories of people who interact directly with the hardware counts.
 *Patrons who take hardware to use and cause the count to be decremented.
 *Bussers who bring clean hardware back and cause the count to be incremented.
-*The Buffet Manager who reads the variable counts and ensures that there is sufficient hardware  before sending a party through the buffet line.
- In order to know when it is OK to send a party through the buffet, the Buffet Manager must check the hardware variables and compare them to the Party<code></code>Size variable for your party (all counts must be __>__ Party<code></code>Size).  If the initial check when your party approaches finds the counts too low the Buffet Manager waits on the ''condition variable'' and your party (thread) waits in line.
+*The Buffet Manager who reads the variable counts and ensures that the requirements are met.
+*There are 2 requirements that must be met to be allowed into the buffet by the Buffet Manager.
+*The previous party must have left the buffet (Patrons=0), so the quantity of hardware that they took is reflected accurately in the counts.  <<Color2(green,We need a mechanism to monitor the number if patrons in the line that is primary to the hardware count, which is subordinate.)>>
+*There must be enough of each type of hardware available to send an entire party through together.  <<Color2(green,We need a mechanism related to above that tells the Buffet Manager to ignore the hardware condition variable as long as Patrons__>__1)>>
+ In order to know when it is OK to send a party through the buffet, the Buffet Manager waits for the buffet to be empty of Patrons.  <<Color2(green,(Only one party at a time is permitted in the buffet in order to ensure that the count has adjusted for the hardware the party in the buffet takes before the Buffet Manager checks the values and allows another party through.))>>  Then, he/she must check the hardware variables and compare them to the Party<code></code>Size variable for your party (all counts must be __>__ Party<code></code>Size).  If the initial check when your party approaches finds that there is enough hardware your party is allowed to pass.  If a count is too low the Buffet Manager waits on the ''condition variable'' and your party (thread) waits in line.
 *Because of the ''mutex'' the Buffet Manager can only view the current counts when no one else is interacting with the hardware.  This ensures that the Buffet Manager is basing his/her decision to send a group back on current, accurate counts.
-*If your party has to wait, you will wait until the ''condition variable'' alerts the Buffet Manager that a hardware count has changed.  (This is more efficient than requiring the Buffet Manager to constantly check for changes or having only periodic checks that may leave available hardware sitting unused and Patrons waiting in line unnecessarily.)  This alert tells the Buffet Manager to check the numbers again to see if the count has become high enough for each type of hardware to let the next party through the buffet line.  If, following an alert, there is still not enough hardware ready for the next party, then the Buffet Manager can go back to other tasks and ignore the counts until another alert from the ''condition variable'' comes through.  Once there are enough pieces of hardware available for the next party to pass through, the Buffet Manager ushers them to the buffet line.-~
+*If your party has to wait, you will wait until the ''condition variable'' alerts the Buffet Manager that a hardware count has changed.  (This is more efficient than requiring the Buffet Manager to constantly check for changes or having only periodic checks that may leave available hardware sitting unused and Patrons waiting in line unnecessarily.)  This alert tells the Buffet Manager to check the numbers again to see if the count has become high enough for each type of hardware to let the next party through the buffet line.  If, following an alert, there is still not enough hardware ready for the next party, then the Buffet Manager can go back to other tasks and ignore the counts until another alert from the ''condition variable'' comes through.  Once there are enough pieces of hardware available for the next party to pass through, the Buffet Manager ushers them to the buffet line.
+ Once your party is through the buffet you move to the table that was reserved for you by the Host(ess).  After your party departs, a Busser removes all the used hardware (and everything else) from the table and takes it to the kitchen to be washed by Dishwashers (yet more ''threads'').
+*At the kitchen a ''semaphore'' tracks the number of hardware pieces that are arriving to be washed.  
+*If the count is __>__1 the Dishwashers take turns scraping off the hardware and taking them to the dish-washers to be cleaned.  When a Dishwasher takes hardware the relevant ''semaphore(s)'' is/are decremented to indicate that there are fewer pieces of hardware remaining to be cleaned.  If the count is still __>__1 other Dishwashers will continue to take as many pieces as they can carry and will decrement the count appropriately.
+*<<Color2(green,?? Is a mutex necessary here? ??)>>
+*If the count is 0 the Dishwashers can be performing other tasks like unloading the dish-washing machines and preparing cleaned hardware for Bussers to take back to the buffet, or they can be on a break.
+*In order to ensure that dirty hardware never remains at the dirty station any longer than necessary a ''condition variable'' is in place to alert the Dishwashers whenever the count changes (?? up ??).  <<Color2(green,Can a CV be set up to only alert if the count increments or does it have to alert for any change?)  This way a Dishwasher won't stay on a break if there is work to be done.-~
 
 
 == Functions ==
