--- a/CategoryMutex.mediawiki
+++ b/CategoryMutex.mediawiki
@@ -23,17 +23,17 @@ There are 3 primitives available in SDL, the:
 
 <span id="Mutex"></span>
 === Mutex ===
-~-If you understand the phrase "mutually exclusive" then you already know the basic idea of a mutex.  Mutex, or __mut__ual __ex__clusion, functions are used to protect data structures in multi-threaded processes.  By coordinating multiple threads using or calling the same data source a mutex prevents interference between threads that may cause instability in the program.  Threads take turns locking the mutex (accessing the resource) one at a time.  Waiting threads are queued up ^based on the mutex algorithm? / based on the OS?^ and take their turn locking (accessing) the shared resource as each previous thread unlocks (releases) the mutex.  Only the thread that has locked the mutex can access the data structure to read or write to it.-~
- ~-''Analogy:'' This is similar to needing a key to access the restroom at a gas station.-~
-  ~-*The clerk at the counter who controls access to the key is like the ''mutex''.-~<br/>
-  ~-*The restroom is like the ''data structure''.-~<br/>
-  ~-*An individual needing to use the restroom is like a ''thread''.-~<br/>
- ~-If someone (''a thread'') wants to use the bathroom (''data structure'') they must request permission from the clerk (''mutex''), who only has 1 key to give out.  The person who currently possesses the key (''locks the mutex'') has access to use the restroom and everyone else must wait.  Once the key is returned to the clerk anyone waiting for the restroom may then attempt to get the key from the clerk.  Eventually each waiting person will get their turn, but the restroom cannot be used by more than one person at a time in this way.  (Please disregard the 'human factor' in this analogy, which allows individuals to break rules.  Thankfully computers are much less prone to do so.)-~  ;)
+~-If you understand the phrase "mutually exclusive" then you already know the basic idea of a ''mutex''.  '''''Mutex'', or __mut__ual __ex__clusion, functions are used to protect data structures in multi-threaded processes.'''  By coordinating multiple threads using or calling the same data source a ''mutex'' prevents interference between threads that may cause instability in the program.  Threads take turns locking the ''mutex'' (accessing the resource) one at a time.  Waiting threads are queued up ^based on the mutex algorithm? / based on the OS?^ and take their turn locking (accessing) the shared resource as each previous thread unlocks (releases) the ''mutex''.  '''Only the thread that has locked the ''mutex'' can access the data structure to read or write to it.'''-~
+ ~-''Analogy:'' This is similar to needing a key to access the restroom at a gas station.
+*The clerk at the counter who controls access to the key is like the ''mutex''.<br/>
+*The restroom is like the ''data structure''.<br/>
+*An individual needing to use the restroom is like a ''thread''.<br/>
+ If someone (''a thread'') wants to use the bathroom (''data structure'') they must request permission from the clerk (''mutex''), who only has 1 key to give out.  The person who currently possesses the key (''locks the mutex'') has access to use the restroom and everyone else must wait.  Once the key is returned to the clerk (''the mutex is unlocked'') anyone waiting for the restroom may then attempt to get the key from the clerk.  Eventually each waiting person will get their turn, but in this way the restroom cannot be used by more than one person at a time.  [Please disregard the 'human factor' in this analogy, which allows individuals to break rules.  Thankfully computers are much less prone to do so.]-~  ;)
 
 
 <span id="Semaphore"></span>
 === Semaphore ===
-~-Semaphores have 2 features - they count and they snooze threads.  They can either count up from 0 or down from a preset starting point.  In both cases the critical value is 0.  It indicates that there is nothing available to be worked on.  When the count is 0 a ''semaphore'' tells waiting threads to sleep until the count is >0.  ''Semaphore'' functions are used to determine whether a data structure is available to be allocated to a thread, and releases a thread (or threads if the count is >1) to access the data if it is.  Because of the potential to permit multiple threads access to the same data, the individual data structures are often protected directly by a mutex and the semaphore acts as a 2nd layer of regulation.
+~-'''''Semaphores'' have 2 features - they count and they snooze threads.'''  They can either count up from 0 or down from a preset starting point.  In both cases the critical value is 0.  It indicates that there is nothing available to be worked on.  '''When the count is 0 a ''semaphore'' tells waiting threads to sleep until the count is >0.'''  ''Semaphore'' functions are used to determine whether a data structure is available to be allocated to a thread, and releases a thread (or threads if the count is >1) to access the data if it is.  Because of the potential to permit multiple threads access to the same data, the individual data structures are often protected directly by a mutex and the semaphore acts as a 2nd layer of regulation.
 
 Note that a ''semaphore'' can behave much like a ''mutex'' if the count never exceeds 1.  Like a ''mutex'', a ''semaphore'' limited to 1 can only allow 1 thread past its "check point" in the process.  This effectively removes the possibility of another thread using the same data simultaneously.-~
 
